--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,7 @@
-alembic==1.13.2
-backend==0.2.4.1
-Flask==3.1.0
-Flask_Cors==5.0.0
-Flask_Migrate==4.0.7
-flask_sqlalchemy==3.1.1
-MySQL-python==1.2.5
-SQLAlchemy==2.0.31
+Flask
+Flask_Cors
+Flask_Migrate
+flask_sqlalchemy
+SQLAlchemy
+mysql
+mysqlclient
