--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,5 @@ Flask==3.1.0
 Flask_Cors==5.0.0
 Flask_Migrate==4.0.7
 flask_sqlalchemy==3.1.1
-MySQL-python==1.2.5
 SQLAlchemy==2.0.31
+MySQLdb==1.4.6
